Czech translations improvements

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -190,7 +190,7 @@
 		Portuguese:"Nossas relações"
                 Polish:"Nasze relacje:"
 		Russian:"Наши отношения: "
-		Czech:"Naše mezinárodní vztahy"
+		Czech:"Náš vzájemný vztah "
 }
 
 	"We have encountered the City-State of [name]!":{ // e.g. the Cultured city state of Vienna
