--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -50,7 +50,7 @@
 		Simplified_Chinese:"完成需"
 		Portuguese:"em"
 		Japanese:"に"
-		Czech:"v"
+		Czech:"za"
 }
 
 /////// Turn
@@ -621,7 +621,8 @@
 }
 
 	"Golden Age":{
-	Simplified_Chinese:"黄金时代"
+		Simplified_Chinese:"黄金时代"
+		Czech:"Zlatý Věk"
 }
 
 	// You don't have to translate this is it's good for your language, but some languages have their own display
@@ -1016,7 +1017,7 @@
 		Simplified_Chinese:"空闲人口"
 		Portuguese:"População livre"
 		Japanese:"無料の人口"
-		Czech:"Nevyužitá populace"
+		Czech:"Nezaměstnaní obyvatelé"
 }
 
 	"[turnsToExpansion] turns to expansion":{
@@ -1030,7 +1031,7 @@
 		Simplified_Chinese:"此城市将在[turnsToExpansion]回合后扩张"
 		Portuguese:"[turnsToExpansion] turnos até a expansão"
 		Japanese:"[turnsToExpansion]が拡大に変わります",
-		Czech:"[turnsToExpansion] tahů do rozšíření"
+		Czech:"[turnsToExpansion] tahů do rozšíření města"
 }
 
 	"Stopped expansion":{ // if culture is 0
@@ -1417,6 +1418,7 @@
 
 	"Occupied!":{ // Shown in the battle table when attacking a defeated city
 		Simplified_Chinese:"可以占领！"
+		Czech:"Obsazené!"
 }
 
 	"Attack":{
@@ -1472,22 +1474,27 @@
 
 	"Attacker Bonus":{
 		Simplified_Chinese:"主动发起攻击"
+		Czech:"Útočný bonus"
 }
 
 	"Landing":{
-		Simplified_Chinese:"登陆作战"
+		Simplified_Chinese:"登陆作战",
+		Czech:"Přistání"
 }
 
 	"Flanking":{
-		Simplified_Chinese:"侧翼夹击"
+		Simplified_Chinese:"侧翼夹击",
+		Czech:"Doprovod"
 }
 
 	"vs [unitType]":{
 		Simplified_Chinese:"对战[unitType]"
+		Czech:"proti [unitType]"
 }
 
 	"Terrain":{
 		Simplified_Chinese:"地形修正"
+		Czech:"Terén"
 }
 
 ///////// Unit uniques
@@ -1664,11 +1671,6 @@
 		Portuguese:"Edifícios"
 		German:"Gebäude"
 		Czech:"Budovy"
-}
-
-	"Tiles":{
-		Italian:"Caselle"
-		Czech:"Políčka"
 }
 
 	"Wonders":{
@@ -1888,6 +1890,7 @@
 	"Tiles":{
 		Italian:"Caselle"
 		Simplified_Chinese:"地块"
+		Czech:"Políčka"
 }
 
 ////// Victory Screen
