update chinese translation

--- a/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
+++ b/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
@@ -176,7 +176,7 @@
 		German:"Küste"
 		Dutch:"Costa"
 		Spanish:"Costa"
-		Simplified_Chinese:"海滨"
+		Simplified_Chinese:"海岸"
 		Portuguese:"Costa"
                 Korean:"연안"
 		Czech:"Pobřeží"
@@ -303,7 +303,7 @@
 		German:"Stein"
 		Dutch:"Steen"
 		Spanish:"Piedra"
-		Simplified_Chinese:"花岗石"
+		Simplified_Chinese:"石材"
 		Portuguese:"Pedra"
                 Korean:"돌"
 		Czech:"Kámen"
@@ -348,7 +348,7 @@
 		German:"Pferde"
 		Dutch:"Paarden"
 		Spanish:"Caballos"
-		Simplified_Chinese:"马"
+		Simplified_Chinese:"马匹"
 		Portuguese:"Cavalos"
                 Korean:"말"
 		Czech:"Bizon"
@@ -362,7 +362,7 @@
 		German:"Eisen"
 		Dutch:"Ijzer"
 		Spanish:"Hierro"
-		Simplified_Chinese:"铁"
+		Simplified_Chinese:"铁矿"
 		Portuguese:"Ferro"
                 Korean:"철"
 		Czech:"Železná ruda"
@@ -376,7 +376,7 @@
 		German:"Kohle"
 		Dutch:"Kool"
 		Spanish:"Carbón"
-		Simplified_Chinese:"煤"
+		Simplified_Chinese:"煤矿"
 		Portuguese:"Carvão"
                 Korean:"석탄"
 		Czech:"Uhlí"
@@ -404,7 +404,7 @@
 		German:"Aluminium"
 		Dutch:"Aluminium"
 		Spanish:"Aluminio"
-		Simplified_Chinese:"铝"
+		Simplified_Chinese:"铝矿"
 		Portuguese:"Alumínio"
                 Korean:"알루미늄"
 		Czech:"Hliník"
@@ -418,7 +418,7 @@
 		German:"Uran"
 		Dutch:"Uranium"
 		Spanish:"Uranio"
-		Simplified_Chinese:"铀"
+		Simplified_Chinese:"铀矿"
 		Portuguese:"Urânio"
                 Korean:"우라늄"
 		Czech:"Uranium"
@@ -625,7 +625,7 @@
 		German:"Kupfer"
 		Dutch:"Koperen"
 		Spanish:"Cobre"
-		Simplified_Chinese:"赤铜"
+		Simplified_Chinese:"铜矿"
 		Portuguese:"Cobre"
                 Korean:"구리"
 		Czech:"Měď"
@@ -725,7 +725,7 @@
 		German:"Mine"
 		Dutch:"Mijn"
 		Spanish:"Mina"
-		Simplified_Chinese:"矿井"
+		Simplified_Chinese:"矿场"
 		Portuguese:"Mina"
                 Korean:"광산"
 		Czech:"Důl"
@@ -753,7 +753,7 @@
 		German:"Lager"
 		Dutch:"Kamp"
 		Spanish:"Campamento"
-		Simplified_Chinese:"猎场"
+		Simplified_Chinese:"营地"
 		Portuguese:"Campo"
                 Korean:"캠프"
 		Czech:"Tábor"
@@ -840,7 +840,7 @@
 
 	"Remove Road":{
 		Italian:"Rimuovi Strada"
-		Simplified_Chinese:"拆毁道路"
+		Simplified_Chinese:"拆除道路"
 		French:"Retirer la route"
 		Russian:"Убрать дорогу"
                 Korean:"도로 제거"
@@ -927,7 +927,7 @@
 		Italian:"Rovine cittadine"
 		Romanian:"Oraș în ruină"
 		Spanish:"Ciudad en ruinas"
-		Simplified_Chinese:"城市遗址"
+		Simplified_Chinese:"城市废墟"
 		German:"Stadtruinen"
 		French:"Ruines"
 		Russian:"Руины города"
@@ -1009,7 +1009,7 @@
 		Italian:"+1 Cultura aggiuntiva per ogni Moai adiacente"
                 Korean:"인접한 각 Moai에 대해 +1 추가 문화"
 		Czech:"+1 kulturní bod za každý Moai"
-		Simplified_Chinese:"每个相邻的摩艾石像群额外+1文化"
+		Simplified_Chinese:"每个相邻的摩艾石像群额外 +1 文化"
 }
 
 	"Can only be built on Coastal tiles":{
