--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -19,7 +19,7 @@
 	"Could not load game from clipboard!":{
 		Italian:"Impossibile caricare partita dagli appunti!"
 		Romanian:"Jocul nu a putut fi încărcat din clipboard!"
-		Simplified_Chinese:"无法从剪贴板读取游戏!"
+		Simplified_Chinese:"无法从剪贴板中读取游戏！"
 		Portuguese:"Não foi possivel carregar o jogo da prancheta"
 		German:"Das Spiel konnte nicht aus der Zwischenablage geladen werden!"
 		French:"Impossible de charger la partie depuis le presse-papier"
@@ -125,7 +125,7 @@
 
 	"HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED!": {
 		Italian:"IN FASE DI PRODUZIONE - TI ABBIAMO AVVERTITO!"
-		Simplified_Chinese:"⚠︎警告！试验性功能！"
+		Simplified_Chinese:"警告！试验性功能！"
 		Ukrainian:"ПЕРЕБУВАЄ В РОЗРОБЦІ - ВАС ПОПЕРЕДЖЕНО!"
 }
 
@@ -246,7 +246,7 @@
 		French:"Colon"
 		Romanian:"Colonist"
 		Spanish:"Colono"
-		Simplified_Chinese:"移民"
+		Simplified_Chinese:"开拓"
 		Portuguese:"Colonizador"
 		German:"Siedler"
                 Korean:"개척자"
@@ -330,7 +330,7 @@
 		French:"Immortel"
 		Romanian:"Nemuritor"
 		Spanish:"Inmortal"
-		Simplified_Chinese:"仙人"
+		Simplified_Chinese:"不朽"
 		Portuguese:"Imortal"
 		German:"Unsterblicher"
                 Korean:"불멸"
@@ -398,7 +398,7 @@
 
 	"User ID":{
 		Italian:"ID Utente"
-		Simplified_Chinese:"玩家ID"
+		Simplified_Chinese:"玩家 ID"
 		Russian:"ID игрока"
                 Korean:"사용자 Id"
 		Czech:"Uživatelské ID"
@@ -461,7 +461,7 @@
 
 	"Invalid game ID!":{
 		Italian:"ID Partita non corretto"
-		Simplified_Chinese:"无效的游戏Id！"
+		Simplified_Chinese:"无效的游戏 ID！"
 		Russian:"Некорректный ID игры!"
                 Korean:"잘못된 게임 ID 입니다!"
 		Czech:"Chybné ID hry"
@@ -470,7 +470,7 @@
 
 	"Copy User ID":{
 		Italian:"Copia ID Utente"
-		Simplified_Chinese:"复制玩家ID"
+		Simplified_Chinese:"复制玩家 ID"
 		Russian:"Скопировать ID игрока"
                 Korean:"사용자 Id 복사"
 		Czech:"Kopírovat uživatelské ID"
@@ -479,7 +479,7 @@
 
 	"Copy Game ID":{
 		Italian:"Copia ID Partita"
-		Simplified_Chinese:"复制游戏ID"
+		Simplified_Chinese:"复制游戏 ID"
 		Russian:"Скопировать ID игры"
                 Korean:"게임 Id 복사"
 		Czech:"Kopírovat ID hry"
@@ -498,7 +498,7 @@
 		Italian:"Copia ID giocatore dagli appunti"
                 Korean:"클립보드의 플레이어 ID"
 		Czech:"Kopírovat ID hráče ze schránky"
-		Simplified_Chinese:"从剪贴板获取玩家ID"
+		Simplified_Chinese:"从剪贴板获取玩家 ID"
 		Ukrainian:"Ідентифікатор гравця з буфера обміну"
 }
 
@@ -507,7 +507,7 @@
 		Italian:"Per creare una partita multigiocatore, attiva la spunta su 'Multigiocatore' nella schermata Nuova Partita, e inserisci l'ID utente per del giocatore per ogni rispettivo giocatore umano"
                 Korean:"멀티플레이어 게임을 만들려면 새로운 게임 화면에서 '멀티플레이어' 토글을 확인하고 각 인간 플레이어에 대해 해당 플레이어의 사용자 ID를 삽입하십시오."
 		Czech:"Pro vytvoření hry pro více hráčů zaškrtněte 'Více hráčů' na obrazovce s novou hrou a pro každého lidského hráče vložte jeho hráčské ID."
-		Simplified_Chinese:"创建多人游戏时，首先请选中“开始新游戏”界面的“在线多人游戏”复选框，同时将每个参与游戏的玩家ID填入其想扮演文明的“Player ID”文本框内。"
+		Simplified_Chinese:"要创建多人游戏，首先请选中“开始新游戏”界面的“在线多人游戏”复选框，同时将每个参与游戏的玩家 ID 填入其想扮演文明的“玩家 ID”文本框内。"
 		Ukrainian:"Для створення багатокористувацької гри перевірте перемикач 'Багатокористувацька' у віконці 'Нова гра' і для кожної людини-гравця введіть відповідний ідентифікатор"
 }
 
@@ -515,7 +515,7 @@
 		Italian:"Puoi assegnarvi facilmente il tuo ID Utente, e altri giocatori possono copiarvi il loro ID Utente e mandartelo per unirsi alla partita."
                 Korean:"당신은 당신의 사용자 ID를 쉽게 거기에 할당할 수 있고, 다른 플레이어는 당신의 사용자 ID를 여기에 복사하여 당신이 게임에 포함하도록 당신에게 보낼 수 있습니다."
 		Czech:"Svoje vlastní ID můžete přiřadit jednoduše, ostatní hráči můžou zkopírovat svoje uživatelské ID tady a poslat vám ho, aby jste je připojil ke hře."
-		Simplified_Chinese:"直接点击“设置为当前玩家”就可自动填入你自己的玩家ID。对于其他玩家，他们可在终端上打开游戏并在当前界面点击“复制玩家ID”按钮将他们的ID复制到剪贴板，然后通过网络发送给你，你可以在“开始新游戏”界面将接收到的ID填入他们想扮演文明的“Player ID”文本框内使其加入游戏。"
+		Simplified_Chinese:"您可以在此自动填入自己的玩家 ID。其他玩家可以在同样的界面复制自己的 ID，并发送给您在此填入。"
 		Ukrainian:"Тут Ви можете легко вказати власний ідентифікатор гравця, а інші гравці можуть скопіювати їхні ідентифікатори і надіслати Вам для додавання до гри."
 }
 
@@ -523,7 +523,7 @@
 		Italian:"Una volta creata la tua partita, ritorna in questa schermata per copiare l'ID Partita e mandala ad altri giocatori."
                 Korean:"게임을 만든 후 이 화면을 다시 입력하여 게임 ID를 복사하여 다른 플레이어에게 전송하십시오."
 		Czech:"Ve chvíli kdy vytvoříte hru, vraťte se zpět na tuto obrazovku, zkopírujte ID hry a pošlete ho ostatním hráčům."
-		Simplified_Chinese:"当你创建了多人游戏后，进入此界面同时点击“复制游戏ID”按钮将游戏ID复制到剪贴板并通过网络发送给其他玩家。"
+		Simplified_Chinese:"创建多人游戏后，再次进入此界面，复制游戏 ID 并发送给其他玩家。"
 		Ukrainian:"Щойно Ви створите власну гру, зайдіть до цього віконця для копіювання ідентифікатора гри і надсилання іншим гравцям."
 }
 
@@ -531,7 +531,7 @@
 		Italian:"I giocatori possono entrare nella tua partita copiando il codice ID sugli appunti e cliccando il tasto Unisciti."
                 Korean:"플레이어는 게임 ID를 클립보드에 복사하고 게임 참여 버튼을 클릭하여 게임에 들어갈 수 있습니다."
 		Czech:"Ostatní hráči můžou vstoupit do hry zkopírováním ID hry do schránky a kliknutím na tlačítko 'Připojit se ke hře'"
-		Simplified_Chinese:"其他玩家可以将接收到的游戏ID复制到剪贴板，同时点击“加入游戏”按钮加入游戏"
+		Simplified_Chinese:"其他玩家可以将接收到的游戏 ID 复制到剪贴板，同时点击“加入游戏”按钮加入游戏。"
 		Ukrainian:"Гравці можуть зайти до вашої гри, скопіювавши ідентифікатор гри до буфера обміну і натиснувши на кнопку 'Приєднатися до гри'"
 }
 
@@ -588,7 +588,7 @@
 	// Starting Era, the Era names don't need to translate.
 	"Starting Era":{
 		Italian:"Epoca iniziale"
-		Simplified_Chinese:"开始时代"
+		Simplified_Chinese:"起始时代"
     Korean:"시작 시대"
 		Czech:"Doba počátku hry"
 		Ukrainian:"Початкова епоха"
@@ -599,7 +599,7 @@
 	"It looks like we can't make a map with the parameters you requested!":{
 		Italian:"Sembra che i parametri da te impostati siano eccessivi per questa mappa!"
 		Russian:"Похоже, что мы не можем создать карту с нужными вам параметрами!"
-		Simplified_Chinese:"无法根据你的设置创建地图！"
+		Simplified_Chinese:"无法根据您的设置创建地图！"
                 Korean:"당신이 요청한 매개변수로 지도를 만들 수 없을 것 같습니다!"
 		Czech:"Vypadá to, že nelze vytvořit mapu dle vašeho zadání!"
 		Ukrainian:"Неможливо створити мапу з обраними параметрами!"
@@ -608,7 +608,7 @@
 	"Maybe you put too many players into too small a map?":{
 		Italian:"Forse hai inserito troppi giocatori o altri parametri?"
 		Russian:"Может, у вас слишком много игроков для такой небольшой карты?"
-		Simplified_Chinese:"或许你放置了太多玩家在如此小的地图上？"
+		Simplified_Chinese:"可能您在小地图上放置了太多玩家？"
                 Korean:"너무 작은 지도에 너무 많은 플레이어를 넣었나요?"
 		Czech:"Nevložili jste příliš mnoho hráčů do moc malé mapy?"
 		Ukrainian:"Можливо забагато гравців на замаленьку мапу?"
@@ -616,7 +616,7 @@
 
 	"No human players selected!":{
 		Italian:"È necessario almeno un giocatore umano!"
-		Simplified_Chinese:"未选择玩家！"
+		Simplified_Chinese:"未选择真人玩家！"
                 Korean:"인간 플레이어가 선택 되지 않았습니다!"
 		Czech:"Nebyl vybrán lidský hráč!"
 		Ukrainian:"Не обрано людей-гравців!"
@@ -633,7 +633,7 @@
 		German:"Gespeicherte Spiele"
 		Dutch:"Huidige spellen"
 		Spanish:"Partidas guardadas"
-		Simplified_Chinese:"保存当前游戏"
+		Simplified_Chinese:"当前存档"
 		Portuguese:"Partidas salvas"
                 Korean:"현재 게임 저장"
 		Czech:"Aktuálně uložené hry"
@@ -666,7 +666,7 @@
 	"Copy to clipboard":{ //this button exsits in "Save game" and "Map editor", it means that we can copy "current game status" to clipboard, "current game status" is not a existing file but some words.
 		Italian:"Copia su appunti"
 		French:"Copier dans le presse-papier"
-		Simplified_Chinese:"复制当前游戏数据到剪贴板"
+		Simplified_Chinese:"复制到剪贴板"
 		Portuguese:"Copiar" //means copy but it is correct because you can actually paste it as text
 		Russian:"Скопировать в буфер"
                 Korean:"클립보드에 복사"
@@ -705,7 +705,7 @@
 		German:"[saveFileName] laden"
 		Dutch:"[saveFileName] laden"
 		Spanish:"Cargar [saveFileName]"
-		Simplified_Chinese:"读取[saveFileName]"
+		Simplified_Chinese:"读取 [saveFileName]"
 		Portuguese:"Carregar [saveFileName]"
                 Korean:"불러오기 [saveFileName]",
 		Czech:"Načíst hru [saveFileName]"
@@ -754,7 +754,7 @@
 }
 
 	"Are you sure you want to delete this map?":{
-		Simplified_Chinese:"你真想删除这张地图吗？"
+		Simplified_Chinese:"您真想删除这张地图吗？"
 		Italian:"Vuoi davvero cancellare questa mappa?"
 		Russian:"Вы уверены в удалении этой карты?"
                 Korean:"이 지도를 삭제하시겠습니까?"
@@ -817,7 +817,7 @@
 	"Turns between autosaves":{
 		Italian:"Turni tra autosalvataggi"
 		French:"Tours avant sauvegarde automatique"
-		Simplified_Chinese:"自动存档/回合"
+		Simplified_Chinese:"自动存档相隔回合"
 		Portuguese:"Turnos entre autosaves"
 		Russian:"Кол-во ходов между автосохранениями"
                 Korean:"자동 저장 라운드"
@@ -828,7 +828,7 @@
 	"Sound effects volume":{
 		Italian:"Volume effetti"
 		French:"Volume sonore"
-		Simplified_Chinese:"声效大小"
+		Simplified_Chinese:"音效音量"
 		Russian:"Громкость звука"
                 Korean:"음향효과 음량"
 		Czech:"Hlasitost zvuků"
@@ -869,21 +869,21 @@
 
 	"Show worked tiles":{
 		Italian:"Mostra caselle sfruttate"
-		Simplified_Chinese:"显示工作地块"
+		Simplified_Chinese:"显示已开发地块"
 		Czech:"Zobrazit obdělávané políčka"
 		Ukrainian:"Показати оброблювані комірки"
 }
 
 	"Show resources and improvements":{
 		Italian:"Mostra risorse e miglioramenti"
-		Simplified_Chinese:"显示资源与地块设施"
+		Simplified_Chinese:"显示资源与设施"
 		Czech:"Zobrazit zdroje a vylepšení"
 		Ukrainian:"Показати ресурси і вдосконалення"
 }
 
 	"Check for idle units":{
 		Italian:"Controlla unità inutilizzate"
-		Simplified_Chinese:"回合结束前查看未行动单位"
+		Simplified_Chinese:"查看闲置单位"
 		Portuguese:"Cheque por unidades sem ordens",
 		German: "Untätige Einheiten anzeigen bei Rundenende"
 		French:"Vérifier les unités inactives"
@@ -926,7 +926,7 @@
 		Italian:"Costruzione strade automatica"
                 Korean:"도로 자동 건설"
 		Czech:"Automatická vystavba cest"
-		Simplified_Chinese:"自动建造道(铁)路"
+		Simplified_Chinese:"自动建造道路"
 		Ukrainian:"Автоматичне будівництво доріг"
 }
 
@@ -947,7 +947,7 @@
 
 	"Show pixel improvements":{
 		Italian:"Mostra miglioramenti pixel"
-		Simplified_Chinese:"显示像素地块设施"
+		Simplified_Chinese:"显示像素设施"
 }
 
 	"Fontset":{
