--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -111,7 +111,7 @@
 		French:"Négocier la paix"
                 Polish:"Negocjuj pokój"
 		Russian:"Предложить мир"
-		Czech:"Vyjednávat mír"
+		Czech:"Mírové jednání"
 }
 
 	"Very well.":{
